<resources>
    <string name="app_name">Rouned Display</string>


    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="enable_service">Enable App</string>
    <string name="disable_service">Disable App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_agree">Agree</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="service_on">On</string>
    <string name="service_off">Off</string>
    <string name="show_over_notification">Round over Status Bar</string>
    <string name="show_over_navigation">Round over Navigation Bar</string>
    <string name="smart_mode">Auto round over navigation in Home Screen</string>
    <string name="device_dont_have_navigation">Your device dont have virtual navigation bar!</string>
    <string name="size">Size</string>
    <string name="donate">Buy Pro!</string>
    <string name="more_app">More App </string>
    <string name="accessibility_service_description">Rounded Coner Smart Mode</string>

    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="start_on_boot">Start on boot</string>
    <string name="ok">Ok</string>
    <string name="setting">Settings</string>
    <string name="custom">Custom</string>
    <string name="support">More</string>
    <string name="open_source_license">OpenSource License</string>
    <string name="contact_me">Contact Me</string>
    <string name="request_draw_overtop_permission">To draw coners in screen. Application need draw over top permission. Give it ?</string>
    <string name="request_accessibility_service">To enable Smart Mode. Please enable Accessibility Service permission in next screen.</string>
    <string name="choose_coner">Choose Coner</string>


    <string name="app_request_draw_over_app">The newest Android require you to grant a permission to enable filter screen, you need to grant drawing over other apps permission in your system settings.</string>

    <string name="rate_us">Rate me </string>
    <string name="feed_back">Contact me!</string>
    <string name="ads_id">ca-app-pub-7774020351237480/4365240098</string>
    <string name="upgrade_pro">Purchase PRO version !</string>
    <string name="color_filter_switch">Color filter</string>

    <string name="share">Share</string>

    <array name="array_choose_coner">
        <item>Top Left</item>
        <item>Top Right</item>
        <item>Bot Left</item>
        <item>Bot Right</item>
    </array>
</resources>
