<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/rl_top_content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4f83cc"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/donate"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium.Inverse"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:minHeight="60dp"
        android:minWidth="350dp"
        android:visibility="gone"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads_id" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_setting_coner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_background"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/setting"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/rl_enable_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">


                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/enable_service" />


                    <Switch
                        android:id="@+id/sw_enable_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:focusable="false"
                        android:layout_marginRight="15dp"
                        android:gravity="right" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rl_coner_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_brightness"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_rounded_top_right" />

                    <TextView
                        android:id="@+id/tv_brightness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="40dp"
                        android:text="@string/size" />


                    <app.minimize.com.seek_bar_compat.SeekBarCompat
                        android:id="@+id/sb_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="20dp"
                        android:maxHeight="300sp"
                        app:progressBackgroundColor="#616161"
                        app:progressColor="@color/colorPrimary"
                        app:thumbAlpha="1.0"
                        app:thumbColor="@color/colorPrimary" />
                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/ll_custom_coner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:elevation="3dp">

                    <ImageView
                        android:id="@+id/iv_set_coner"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_coner" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="Choose coner" />
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/rl_show_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/layout_background"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/custom"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/iv_show_notify"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_notification" />


                    <TextView
                        android:id="@+id/tv_show_notify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/show_over_notification" />

                    <Switch
                        android:id="@+id/sw_show_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="right" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:id="@+id/iv_show_navigation"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_navigation" />

                    <TextView
                        android:id="@+id/tv_show_navigation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/show_over_navigation" />

                    <Switch
                        android:id="@+id/sw_show_navigation_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp">

                    <ImageView
                        android:id="@+id/iv_smartmode"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_smartmode" />

                    <TextView
                        android:id="@+id/tv_smartmode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/smart_mode" />

                    <Switch
                        android:id="@+id/sw_smartmode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:gravity="center" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/layout_background"
                android:elevation="3dp"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/support"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <RelativeLayout
                    android:id="@+id/rl_contact_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_help" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/contact_me" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_more_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_get_app" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/more_app" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_open_source_license"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_copyright" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="40dp"
                        android:text="@string/open_source_license" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
